--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,6 @@
 accion.actualizar=Actualizar
 accion.agregar=Agregar
+accion.cerrar=Cerrrar
 accion.buscar=Buscar
 accion.eliminar=Eliminar
 accion.guardar=Guardar
